[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/characters/base/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/characters/player/CameraController.gd" type="Script" id=3]
[ext_resource path="res://src/characters/player/states/Move.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/characters/player/states/Idle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/characters/player/UI.gd" type="Script" id=6]
[ext_resource path="res://src/characters/GenericCharacterMesh.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/characters/player/states/Jump.tscn" type="PackedScene" id=8]

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CameraAnchor" type="Spatial" parent="." index="2"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="CameraAnchor" index="0"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 1.5, 2 )

[node name="GenericCharacterMesh" parent="CharacterMesh" index="0" instance=ExtResource( 7 )]
visible = false

[node name="StateMachine" parent="." index="4"]
DEBUG = true

[node name="Idle" parent="StateMachine" index="0" instance=ExtResource( 5 )]

[node name="Move" parent="StateMachine" index="1" instance=ExtResource( 4 )]

[node name="Jump" parent="StateMachine" index="2" instance=ExtResource( 8 )]

[node name="UICanvasLayer" type="CanvasLayer" parent="." index="5"]

[node name="UI" type="Control" parent="UICanvasLayer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugStateLabel" type="Label" parent="UICanvasLayer/UI" index="0"]
margin_right = 40.0
margin_bottom = 14.0
text = "Current State: Idle"
__meta__ = {
"_edit_use_anchors_": false
}
